cmake_minimum_required(VERSION 3.12)
project(HW3b)

set(CMAKE_CXX_STANDARD 14)

add_executable(HW3b Dog.cpp DogToy.cpp Duck.cpp DuckSim.cpp FlyBehavior.cpp FlyWithWings.cpp Mallard.cpp NoFly.cpp NoQuack.cpp Quack.cpp QuackQuack.cpp RedHead.cpp Rubber.cpp Squeak.cpp Dog.h DogToy.h Duck.h FlyBehavior.h FlyWithWings.h Mallard.h NoFly.h NoQuack.h Quack.h QuackQuack.h RedHead.h Rubber.h Squeak.h )